joke-platform/infrastructure/kubernetes/overlays/cluster/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joke-platform
  namespace: joke-platform
  labels:
    app.kubernetes.io/name: joke-platform
    app.kubernetes.io/part-of: joke-platform
spec:
  parentRefs:
  - name: prod-joke-platform-gateway
    namespace: joke-platform
  hostnames:
  - "jokes.bcp.education"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prod-joke-gateway
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: joke-platform-gateway
  namespace: joke-platform
  labels:
    app.kubernetes.io/name: joke-platform
    app.kubernetes.io/part-of: joke-platform
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "jokes.bcp.education"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "jokes.bcp.education"
    tls:
      mode: Terminate
      certificateRefs:
      - name: joke-platform-tls
        kind: Secret
